# telephony_core_service

./: .clang-format  BUILD.gn  Cargo.toml  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  core_service_aafwk.gni  hisysevent.yaml  libtel_core_service.versionscript  ohos.build  patch.txt  telephony.gni  telephony_core_service.gni
common/: BUILD.gn
common/log/include/: telephony_log_c.h  telephony_log_wrapper.h
common/log/src/: telephony_log_wrapper.cpp
common/preferences/include/: tel_profile_util.h
common/preferences/src/: tel_profile_util.cpp
common/utils/include/: str_convert.h
common/utils/src/: str_convert.cpp
frameworks/cj/telephony_radio/: BUILD.gn
frameworks/js/esim/: BUILD.gn
frameworks/js/network_search/: BUILD.gn
frameworks/js/sim/: BUILD.gn
frameworks/js/vcard/: BUILD.gn
frameworks/native/: BUILD.gn
frameworks/native/include/: i_network_search_callback_stub.h
frameworks/native/src/: cell_information.cpp  cell_location.cpp  contract_request_data_parcel.cpp  core_manager_inner.cpp  core_service_client.cpp  core_service_proxy.cpp  download_profile_config_info_parcel.cpp  download_profile_result_parcel.cpp  downloadable_profile_parcel.cpp  esim_service_client.cpp  euicc_info_parcel.cpp  get_downloadable_profiles_result_parcel.cpp  i_network_search_callback_stub.cpp  iesim_service_callback_stub.cpp  ims_reg_info_callback_stub.cpp  ims_sms_callback_stub.cpp  ims_ut_callback_stub.cpp  ims_video_callback_stub.cpp  ims_voice_callback_stub.cpp  manual_network_scan_callback_manager.cpp  network_information.cpp  network_search_result.cpp  network_state.cpp  nr_ssb_information.cpp  operator_config_types.cpp  profile_info_list_parcel.cpp  profile_metadata_result_parcel.cpp  radio_network_manager.cpp  raw_parcel_callback_stub.cpp  resource_utils.cpp  response_esim_result.cpp  signal_information.cpp  sim_card_manager.cpp  tel_ril_base_parcel.cpp  telephony_state_registry_client.cpp  telephony_state_registry_proxy.cpp
interfaces/innerkits/: BUILD.gn  BUILD.gn.rej  IEsimService.idl  libtel_core_service_api.versionscript
interfaces/innerkits/api/: base_context.h  napi_util.cpp  napi_util.h  service_interface_death_recipient.h  telephony_napi_common_error.h  telephony_napi_hril_error_code.h
interfaces/innerkits/call_manager/: call_ability_callback_death_recipient.cpp  call_ability_callback_proxy.cpp  call_manager_death_recipient.h  call_manager_errors.h  call_manager_inner_type.h  call_manager_service_proxy.cpp  call_manager_service_proxy.h  call_status_callback_proxy.cpp  call_status_callback_proxy.h  cellular_call_callback_death_recipient.h  i_call_ability_callback.h  i_call_manager_service.h  i_call_status_callback.h  timer.h
interfaces/innerkits/cellular_call/: cellular_call_interface.h  cellular_call_proxy.cpp  cellular_call_proxy.h  cellular_call_types.h
interfaces/innerkits/cellular_data/: BUILD.gn  cellular_data_client.cpp  cellular_data_client.h  cellular_data_error.h  cellular_data_service_proxy.cpp  cellular_data_service_proxy.h  cellular_data_types.h  i_cellular_data_manager.h
interfaces/innerkits/common/: cellular_data_profile.h  core.h  core_manager.h  dialling_numbers_info.h  hril.h  hril_call_parcel.h  hril_data_parcel.h  hril_modem_parcel.h  hril_network_parcel.h  hril_notification.h  hril_request.h  hril_sim_parcel.h  hril_sms_parcel.h  hril_types.h  i_icc_dialling_numbers_manager.h  i_network_search.h  i_network_search_callback.h  i_sim_file_manager.h  i_sim_manager.h  i_sim_sms_manager.h  i_sim_state_manager.h  i_tel_ril_manager.h  network_information.h  network_search_result.h  network_state.h  observer_handler.h  parcel_base.h  phone.h  phone_manager.h  signal_information.h  telephony_errors.h  telephony_log.h
interfaces/innerkits/core/: cell_information.h  cell_location.h  core.h  core_manager.h  core_manager_inner.h  core_service_client.h  core_service_proxy.h  dialling_numbers_info.h  i_core_service.h  i_network_search_callback.h  i_sim_account_manager.h  i_sim_state_manager.h  i_stk_manager.h  i_tel_ril_manager.h  network_state.h  observer_handler.h  radio_network_manager.h  signal_information.h  sim_card_manager.h  sim_state_type.h  telephony_errors.h  telephony_log.h
interfaces/innerkits/include/: cell_information.h  cell_location.h  contract_request_data_parcel.h  core_manager_inner.h  core_service_client.h  core_service_common_event_callback.h  core_service_errors.h  core_service_ipc_interface_code.h  core_service_proxy.h  desensitize_string_stream.h  dialling_numbers_info.h  download_profile_config_info_parcel.h  download_profile_result_parcel.h  download_profile_result_parcel.h.rej  downloadable_profile_parcel.h  esim_service_client.h  esim_service_ipc_interface_code.h  esim_state_type.h  esim_state_type.h.rej  euicc_info_parcel.h  get_downloadable_profiles_result_parcel.h  get_downloadable_profiles_result_parcel.h.rej  i_core_service.h  i_core_service.h.rej  i_core_service_common_event_hub.h  i_esim_manager.h  i_esim_service.h  i_icc_file.h  i_network_search.h  i_network_search_callback.h  i_network_search_callback_stub.h  i_operator_config_hisysevent.h  i_raw_parcel_callback.h  i_sim_manager.h  i_sim_manager.h.rej  i_tel_ril_manager.h  i_telephony_state_notify.h  iesim_service_callback.h  iesim_service_callback_stub.h  ims_manager_callback.h  (+52 more)
interfaces/kits/: BUILD.gn
services/etc/ons/: BUILD.gn
sim/test/: BUILD.gn  common_event_test.h  test.cpp
telephonyres/: BUILD.gn  TelephonyResources.p7b
telephonyres/main/: config.json
test/: BUILD.gn  core_service_test.gni
test/fuzztest/: BUILD.gn
test/guard/: global_guard.cpp  global_guard.h  global_guard_init.h
test/mock/: mock_data_share_result_set.h  mock_datashare_helper.h  mock_i_core_service.h  mock_i_network_search_manager.h  mock_i_raw_parcel_callback.h  mock_i_system_ability_manager.h  mock_multi_sim_controller.h  mock_multi_sim_monitor.h  mock_sim_fil_manage.h  mock_sim_manager.h  mock_sim_rdb_helper.h  mock_tel_ril_manager.h
utils/: BUILD.gn  libtel_common.versionscript  libtel_common_esim.versionscript  libtel_vcard.versionscript
(+1205 files in other folders)
