# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/adapter/uhdf2/uhdf.gni")
import("//base/telephony/core_service/telephony.gni")

TELEPHONY_CORE_SERVICE_ROOT = "//base/telephony/core_service"
TELEPHONY_NETWORK_SEARCH_ROOT = "//base/telephony/core_service/services/network_search"
TELEPHONY_SIM_ROOT = "//base/telephony/core_service/services/sim"
TELEPHONY_FRAMEWORKS_ROOT = "//base/telephony/core_service/frameworks/native/"

config("telephony_sim_config") {
    if (defined (sim_slot_num)) {
        defines = [ "SIM_SLOT_NUM = $sim_slot_num" ]
        if (sim_slot_num > 1) {
          defines += [ "MULTI_SIM_SLOT_SUPPORT" ]
        }
    } else {
        defines = [ "SIM_SLOT_NUM = 1" ]
    }
}

ohos_shared_library("tel_core_service") {
  install_enable = true

  configs = [ ":telephony_sim_config" ]

  sources = [
    "$TELEPHONY_CORE_SERVICE_ROOT/services/server/src/core_service.cpp",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/server/src/core_service_stub.cpp",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/server/src/core_manager.cpp",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/server/src/core.cpp",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/server/src/observer_handler.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_manager.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_handler.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_state.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_notify.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_register.cpp",
    "$TELEPHONY_FRAMEWORKS_ROOT/src/network_state.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/radio_info.cpp",
    "$TELEPHONY_FRAMEWORKS_ROOT/src/signal_information.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/signal_info.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/operator_name.cpp",
    "$TELEPHONY_FRAMEWORKS_ROOT/src/network_search_result.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_selection.cpp",
    "$TELEPHONY_FRAMEWORKS_ROOT/src/network_information.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_type.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/nitz_update.cpp",
    "$TELEPHONY_FRAMEWORKS_ROOT/src/cell_information.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/cell_manager.cpp",
    "$TELEPHONY_CORE_SERVICE_ROOT/interfaces/innerkits/network_search/network_search_callback_proxy.cpp",
    "$TELEPHONY_CORE_SERVICE_ROOT/interfaces/innerkits/state_registry/telephony_state_registry_proxy.cpp",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/tel_ril/src/tel_ril_manager.cpp",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/tel_ril/src/hdf_death_recipient.cpp",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/tel_ril/src/tel_ril_base.cpp",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/tel_ril/src/tel_ril_call.cpp",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/tel_ril/src/tel_ril_modem.cpp",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/tel_ril/src/tel_ril_data.cpp",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/tel_ril/src/tel_ril_network.cpp",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/tel_ril/src/tel_ril_sim.cpp",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/tel_ril/src/tel_ril_sms.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_utils.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_file.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_file_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_file.cpp",
    "$TELEPHONY_SIM_ROOT/src/mcc_pool.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_file_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_state.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_state_handle.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_state_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_file_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/plmn_file.cpp",
    "$TELEPHONY_SIM_ROOT/src/usim_file_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_sms_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_sms_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_account_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/multi_sim_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/multi_sim_monitor.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_state_tracker.cpp",
    "$TELEPHONY_SIM_ROOT/src/operator_conf.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_char_decode.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_number_decode.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_dialling_numbers_handler.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_dialling_numbers_cache.cpp",
    "$TELEPHONY_SIM_ROOT/src/tag_service.cpp",
    "$TELEPHONY_SIM_ROOT/src/usim_dialling_numbers_service.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_dialling_numbers_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_rdb_helper.cpp"
  ]

   include_dirs = [
    "$TELEPHONY_CORE_SERVICE_ROOT/interfaces/innerkits/core",
    "//base/telephony/data_storage/sim/include",
    "//base/telephony/data_storage/common/include",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/server/include",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/tel_ril/include",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/include",

    "$TELEPHONY_CORE_SERVICE_ROOT/interfaces/innerkits/network_search",
    "$TELEPHONY_CORE_SERVICE_ROOT/interfaces/innerkits/sim",

    "$TELEPHONY_CORE_SERVICE_ROOT/common/core",
    "$TELEPHONY_CORE_SERVICE_ROOT/interfaces/innerkits/state_registry",
    "$TELEPHONY_CORE_SERVICE_ROOT/utils/log/include",
    "$TELEPHONY_SIM_ROOT/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "//base/notification/ces_standard/cesfwk/kits/native/include",
    "//foundation/distributedschedule/dmsfwk/services/dtbschedmgr/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base/include",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/ohos/aafwk/content/",
    "//third_party/icu/icu4c/source/common/unicode",
    "//third_party/icu/icu4c/source/common",
    "//base/global/i18n_standard/interfaces/native/innerkits/zone/include",
    "//third_party/libphonenumber/cpp/src",
    "//third_party/protobuf/src",
    "//third_party/protobuf/src/google",
    "//third_party/protobuf/src/google/protobuf",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"CoreService\"",
    "LOG_DOMAIN = 0xD002B01",
  ]

  deps = [
    "$hdf_uhdf_path/hdi:libhdi",
    "//drivers/adapter/uhdf2/utils:libhdf_utils",
    "//utils/native/base:utils",
    "//base/telephony/core_service/utils:libtelephony_common",
    "//base/miscservices/time/services:time_service",
    "//base/notification/ans_standard/frameworks/wantagent:wantagent_innerkits",
    "//base/global/i18n_standard/frameworks/zone:zone_util",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
    "//third_party/libxml2:libxml2",
    "//foundation/distributedschedule/dmsfwk/services/dtbschedmgr:distributedschedsvr",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/distributedschedule/dmsfwk/interfaces/innerkits/uri:zuri",
  ]

  external_deps = [
    "safwk:system_ability_fwk",
    "appexecfwk_standard:libeventhandler",
    "appexecfwk_standard:appexecfwk_core",
    "samgr_standard:samgr_proxy",
    "ipc:ipc_core",
    "aafwk_standard:want",
    "aafwk_standard:ability_manager",
    "ces_standard:cesfwk_innerkits",
    "ces_standard:cesfwk_services",
    "native_appdatamgr:native_rdb",
    "native_appdatamgr:native_dataability",
    "power_manager_native:powermgr_client",
    "ril_adapter:hril_innerkits"
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "core_service"
  subsystem_name = "telephony"
}
