# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/telephony/core_service/telephony.gni")
import("//build/ohos.gni")
import("//drivers/adapter/uhdf2/uhdf.gni")

TELEPHONY_CORE_SERVICE_ROOT = "//base/telephony/core_service"
TELEPHONY_NETWORK_SEARCH_ROOT =
    "//base/telephony/core_service/services/network_search"
TELEPHONY_SIM_ROOT = "//base/telephony/core_service/services/sim"
TELEPHONY_TEL_RIL_ROOT = "//base/telephony/core_service/services/tel_ril"

ohos_shared_library("tel_core_service") {
  install_enable = true

  sources = [
    "$TELEPHONY_CORE_SERVICE_ROOT/services/core/src/core_service.cpp",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/core/src/core_service_stub.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/cell_info.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_register.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_callback_proxy.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_handler.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_manager.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_notify.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_state.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_selection.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_type.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_utils.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/nitz_update.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/operator_name.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/radio_info.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/resource_utils.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/signal_info.cpp",
    "$TELEPHONY_SIM_ROOT/src/csim_file_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_dialling_numbers_cache.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_dialling_numbers_handler.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_dialling_numbers_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_file.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_file_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_operator_privilege_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_operator_rule.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_state.cpp",
    "$TELEPHONY_SIM_ROOT/src/isim_file.cpp",
    "$TELEPHONY_SIM_ROOT/src/isim_file_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/mcc_pool.cpp",
    "$TELEPHONY_SIM_ROOT/src/multi_sim_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/multi_sim_monitor.cpp",
    "$TELEPHONY_SIM_ROOT/src/operator_conf.cpp",
    "$TELEPHONY_SIM_ROOT/src/plmn_file.cpp",
    "$TELEPHONY_SIM_ROOT/src/radio_cap_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/ruim_file.cpp",
    "$TELEPHONY_SIM_ROOT/src/ruim_file_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_account_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_char_decode.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_file.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_file_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_file_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_number_decode.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_rdb_helper.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_sms_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_sms_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_state_handle.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_state_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_state_tracker.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_utils.cpp",
    "$TELEPHONY_SIM_ROOT/src/stk_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/stk_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/tag_service.cpp",
    "$TELEPHONY_SIM_ROOT/src/usim_dialling_numbers_service.cpp",
    "$TELEPHONY_SIM_ROOT/src/usim_file_controller.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/hdf_death_recipient.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/observer_handler.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_base.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_call.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_data.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_manager.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_modem.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_network.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_sim.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_sms.cpp",
  ]

  include_dirs = [
    "//base/telephony/data_storage/sim/include",
    "//base/telephony/data_storage/common/include",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/core/include",
    "$TELEPHONY_TEL_RIL_ROOT/include",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/include",
    "$TELEPHONY_CORE_SERVICE_ROOT/utils/log/include",
    "$TELEPHONY_SIM_ROOT/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "//base/notification/ces_standard/cesfwk/kits/native/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base/include",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/ohos/aafwk/content/",
    "//third_party/icu/icu4c/source/common/unicode",
    "//third_party/icu/icu4c/source/common",
    "//base/global/i18n_standard/interfaces/native/innerkits/zone/include",
    "//third_party/libphonenumber/cpp/src",
    "//third_party/protobuf/src",
    "//third_party/protobuf/src/google",
    "//third_party/protobuf/src/google/protobuf",
    "//base/global/resmgr_standard/interfaces/innerkits/include/",
  ]

  configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]

  defines += [
    "TELEPHONY_LOG_TAG = \"CoreService\"",
    "LOG_DOMAIN = 0xD002B01",
  ]

  deps = [
    "$hdf_uhdf_path/hdi:libhdi",
    "//base/global/i18n_standard/frameworks/zone:zone_util",
    "//base/miscservices/time/services:time_service",
    "//base/telephony/core_service/interfaces/innerkits:tel_core_service_api",
    "//base/telephony/core_service/utils:libtel_common",
    "//drivers/adapter/uhdf2/utils:libhdf_utils",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
    "//third_party/libxml2:libxml2",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:wantagent_innerkits",
    "bundle_framework:appexecfwk_core",
    "ces_standard:cesfwk_innerkits",
    "ces_standard:cesfwk_services",
    "eventhandler:libeventhandler",
    "ipc:ipc_core",
    "native_appdatamgr:native_dataability",
    "native_appdatamgr:native_rdb",
    "power_manager_native:powermgr_client",
    "resmgr_standard:global_resmgr",
    "ril_adapter:hril_innerkits",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "startup_l2:syspara",
    "state_registry:tel_state_registry_notify",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "core_service"
  subsystem_name = "telephony"
}
