# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/telephony/core_service/core_service_aafwk.gni")
import("//base/telephony/core_service/telephony.gni")
import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

TELEPHONY_CORE_SERVICE_ROOT = "//base/telephony/core_service"
TELEPHONY_NETWORK_SEARCH_ROOT =
    "//base/telephony/core_service/services/network_search"
TELEPHONY_SIM_ROOT = "//base/telephony/core_service/services/sim"
TELEPHONY_TEL_RIL_ROOT = "//base/telephony/core_service/services/tel_ril"
TELEPHONY_IMS_CORE_SERVICE_SRC_PATH =
    "$TELEPHONY_CORE_SERVICE_ROOT/services/ims_service_interaction/src"

ohos_shared_library("tel_core_service") {
  install_enable = true

  sources = [
    "$TELEPHONY_CORE_SERVICE_ROOT/services/core/src/core_service.cpp",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/core/src/core_service_stub.cpp",
    "$TELEPHONY_IMS_CORE_SERVICE_SRC_PATH/ims_core_service_callback_stub.cpp",
    "$TELEPHONY_IMS_CORE_SERVICE_SRC_PATH/ims_core_service_client.cpp",
    "$TELEPHONY_IMS_CORE_SERVICE_SRC_PATH/ims_core_service_proxy.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/cell_info.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/device_state_handler.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/device_state_observer.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/ims_sms_callback_proxy.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/ims_ut_callback_proxy.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/ims_video_callback_proxy.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/ims_voice_callback_proxy.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_register.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_callback_proxy.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_handler.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_manager.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_notify.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_search_state.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_selection.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_type.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/network_utils.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/nitz_update.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/operator_name.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/radio_info.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/resource_utils.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/setting_utils.cpp",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/src/signal_info.cpp",
    "$TELEPHONY_SIM_ROOT/src/csim_file_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_dialling_numbers_cache.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_dialling_numbers_handler.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_dialling_numbers_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_file.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_file_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_operator_privilege_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_operator_rule.cpp",
    "$TELEPHONY_SIM_ROOT/src/icc_state.cpp",
    "$TELEPHONY_SIM_ROOT/src/isim_file.cpp",
    "$TELEPHONY_SIM_ROOT/src/isim_file_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/mcc_pool.cpp",
    "$TELEPHONY_SIM_ROOT/src/multi_sim_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/multi_sim_monitor.cpp",
    "$TELEPHONY_SIM_ROOT/src/operator_conf.cpp",
    "$TELEPHONY_SIM_ROOT/src/plmn_file.cpp",
    "$TELEPHONY_SIM_ROOT/src/radio_cap_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/ruim_file.cpp",
    "$TELEPHONY_SIM_ROOT/src/ruim_file_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_account_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_char_decode.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_file.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_file_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_file_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_number_decode.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_rdb_helper.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_sms_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_sms_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_state_handle.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_state_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_state_tracker.cpp",
    "$TELEPHONY_SIM_ROOT/src/sim_utils.cpp",
    "$TELEPHONY_SIM_ROOT/src/stk_controller.cpp",
    "$TELEPHONY_SIM_ROOT/src/stk_manager.cpp",
    "$TELEPHONY_SIM_ROOT/src/tag_service.cpp",
    "$TELEPHONY_SIM_ROOT/src/usim_dialling_numbers_service.cpp",
    "$TELEPHONY_SIM_ROOT/src/usim_file_controller.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/hdf_death_recipient.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/observer_handler.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_base.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_call.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_data.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_handler.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_manager.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_modem.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_network.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_sim.cpp",
    "$TELEPHONY_TEL_RIL_ROOT/src/tel_ril_sms.cpp",
  ]

  include_dirs = [
    "//base/telephony/data_storage/sim/include",
    "//base/telephony/data_storage/common/include",
    "$TELEPHONY_CORE_SERVICE_ROOT/services/core/include",
    "$TELEPHONY_TEL_RIL_ROOT/include",
    "$TELEPHONY_NETWORK_SEARCH_ROOT/include",
    "$TELEPHONY_CORE_SERVICE_ROOT/utils/log/include",
    "$TELEPHONY_SIM_ROOT/include",
    "//third_party/icu/icu4c/source/common/unicode",
    "//third_party/icu/icu4c/source/common",
    "//third_party/libphonenumber/cpp/src",
    "//third_party/protobuf/src",
    "//third_party/protobuf/src/google",
    "//third_party/protobuf/src/google/protobuf",
  ]

  configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]

  defines += [
    "TELEPHONY_LOG_TAG = \"CoreService\"",
    "LOG_DOMAIN = 0xD001F04",
  ]

  deps = [
    "${ability_runtime_inner_api_path}/dataobs_manager:dataobs_manager",
    "//base/telephony/core_service/interfaces/innerkits:tel_core_service_api",
    "//base/telephony/core_service/utils:libtel_common",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
    "//third_party/libxml2:libxml2",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:data_ability_helper",
    "ability_runtime:wantagent_innerkits",
    "battery_manager:batterysrv_client",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "common_event_service:cesfwk_innerkits",
    "common_event_service:cesfwk_services",
    "drivers_interface_ril:hril_innerkits",
    "eventhandler:libeventhandler",
    "hdf_core:libhdf_utils",
    "hdf_core:libhdi",
    "i18n:zone_util",
    "init:libbegetutil",
    "ipc:ipc_core",
    "netmanager_base:net_conn_manager_if",
    "power_manager:powermgr_client",
    "relational_store:native_dataability",
    "relational_store:native_rdb",
    "resource_management:global_resmgr",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "time_service:time_service",
    "utils_base:utils",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "core_service"
  subsystem_name = "telephony"
}
