# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#declare build args

declare_args() {
  sim_slot_count = 1
}

if (!defined(defines)) {
  defines = []
}

if (defined(sim_slot_count)) {
  defines += [ "SIM_SLOT_COUNT = $sim_slot_count" ]
  defines += [ "SIM_SLOT_0 = 0" ]
  defines += [ "SIM_SLOT_1 = 1" ]
  defines += [ "SIM_SLOT_2 = 2" ]
  defines += [ "SIM_SLOT_3 = 3" ]
} else {
  defines += [ "SIM_SLOT_COUNT = 1" ]
}

defines += [ "DEFAULT_SIM_SLOT_ID = 0" ]
