# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  telephony_ext_feature = false
  telephony_vsim_feature = false
  telephony_fullnetwork_feature = false
  data_service_ext_feature = false
}

print("telephony_ext_feature = ${telephony_ext_feature}")
telephony_extra_defines = []

if (telephony_ext_feature) {
  telephony_extra_defines += [ "OHOS_BUILD_ENABLE_TELEPHONY_EXT" ]
}

if (telephony_vsim_feature) {
  telephony_extra_defines += [ "OHOS_BUILD_ENABLE_TELEPHONY_VSIM" ]
}

if (telephony_fullnetwork_feature) {
  telephony_extra_defines += [ "OHOS_BUILD_ENABLE_TELEPHONY_FULLNETWORK" ]
}

if (data_service_ext_feature) {
  telephony_extra_defines += [ "OHOS_BUILD_ENABLE_DATA_SERVICE_EXT" ]
}
