# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  telephony_hicollie_able = true
  if (defined(global_parts_info) &&
      !defined(global_parts_info.hiviewdfx_hicollie)) {
    telephony_hicollie_able = false
  }

  core_service_support_esim = false
  if (defined(global_parts_info) &&
      defined(global_parts_info.core_service_support_esim)) {
    core_service_support_esim = true
  }
}

telephony_extra_defines = []

if (defined(global_parts_info) &&
    defined(global_parts_info.telephony_telephony_enhanced)) {
  telephony_extra_defines += [ "OHOS_BUILD_ENABLE_TELEPHONY_EXT" ]
  telephony_extra_defines += [ "OHOS_BUILD_ENABLE_TELEPHONY_VSIM" ]
}

if (core_service_support_esim) {
  telephony_extra_defines += [ "CORE_SERVICE_SUPPORT_ESIM" ]
}
