# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_resources("telephony_res") {
  sources = [ "main/resources" ]
  hap_profile = "./main/config.json"
}

ohos_hap("telephonyres_hap") {
  deps = [ ":telephony_res" ]
  hap_profile = "./main/config.json"
  hap_name = "TelephonyResources"
  module_install_dir = "app/ohos.telephony.resources"
  certificate_profile = "./TelephonyResources.p7b"
  subsystem_name = "telephony"
  part_name = "core_service"
}
